@@ -243,7 +243,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
 
         if (lastFilter != null) {
             try {
-                KeyValueFilter<K2,V2> filter = lastFilter.newInstance();
+                KeyValueFilter<K2,V2> filter = lastFilter.getDeclaredConstructor().newInstance();
                 filter.configureChainedContextWriter(filterConf, contextWriterClass);
             } catch (Exception e) {
                 throw new IOException("Unable to configure " + contextWriterClass + " on " + lastFilter, e);
@@ -321,12 +321,12 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     for (String validatorClass : validatorClasses) {
                         try {
                             Class<? extends FieldValidator> clazz = Class.forName(validatorClass).asSubclass(FieldValidator.class);
-                            FieldValidator validator = clazz.newInstance();
+                            FieldValidator validator = clazz.getDeclaredConstructor().newInstance();
                             validator.init(t, context.getConfiguration());
                             validators.put(typeStr, validator);
                         } catch (ClassNotFoundException e) {
                             log.error("Error finding validator " + validatorClass, e);
-                        } catch (InstantiationException | IllegalAccessException e) {
+                        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                             log.error("Error creating validator " + validatorClass, e);
                         }
                     }
@@ -776,7 +776,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
     }
 
     private static class FieldNormalizationError extends Exception {
-        private static final long serialVersionUID = 1L;
+        private static final long serialVersionUID = 6106161010855162008L;
 
         public FieldNormalizationError(String message, Throwable cause) {
             super(message, cause);
